@@ -23,6 +23,8 @@ void AddSC_example_escort();
 void AddSC_example_gossip_codebox();
 void AddSC_example_misc();
 void AddSC_example_commandscript();
+//Hunter Pet Vendor
+void AddSC_npc_hunterpetvendor();
 
 // spells
 void AddSC_deathknight_spell_scripts();
@@ -1267,6 +1269,8 @@ void AddCustomScripts()
 {
 #ifdef SCRIPTS
     /* This is where custom scripts should be added. */
+    //Hunter Pet Vendor
+    AddSC_npc_hunterpetvendor();
 
 #endif
 }
